# ferrispass

./: .dockerignore  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: args.rs  main.rs
apps/console/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json
apps/console/src/: main.tsx  router.ts
apps/console/src/components/layouts/: auth.layout.ts
apps/console/src/components/ui/: dropdown-menu.tsx  sheet.tsx
apps/console/src/layouts/vault-layout/: top-bar.tsx  vault-layout.tsx
apps/console/src/lib/: theme.ts
apps/console/src/pages/vault/feature/: page-vault-feature.tsx
apps/console/src/pages/vault/ui/: field-row.tsx  filter-chip.tsx  item-detail.tsx  item-list.tsx  list-item.tsx  page-vault.tsx  sidebar-nav.tsx
apps/console/src/stores/: auth.store.ts
libs/application/: Cargo.toml
libs/application/src/: errors.rs  lib.rs
libs/application/src/usecases/: mod.rs  put_vault.rs
libs/auth/: Cargo.toml
libs/auth/src/domain/models/: claims.rs  errors.rs  identity.rs  token.rs
libs/domain/: Cargo.toml
libs/domain/src/: lib.rs
libs/domain/src/shared/: errors.rs  mod.rs
libs/domain/src/vault/: aggregate.rs  header.rs  mod.rs  package.rs  value_objects.rs
libs/ports/: Cargo.toml
libs/ports/src/: etag.rs  lib.rs  vault_repository.rs
