[package]
name = "auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
